crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F508_F50x.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F508 `%`-format string `*` specifier requires sequence
  --> F50x.py:11:1
   |
 9 | '%(bar)s' % (1, 2, 3)  # F502
10 | '%s %s' % {'k': 'v'}  # F503
11 | '%(bar)*s' % {'bar': 'baz'}  # F506, F508
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |
13 | # ok: single %s with mapping
