crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F525_F525.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F525 `.format` string mixes automatic and manual numbering
 --> F525.py:1:1
  |
1 | "{} {1}".format(1, 2)  # F525
  | ^^^^^^^^^^^^^^^^^^^^^
2 | "{0} {}".format(1, 2)  # F523, F525

F525 `.format` string mixes automatic and manual numbering
 --> F525.py:2:1
1 | "{} {1}".format(1, 2)  # F525
2 | "{0} {}".format(1, 2)  # F523, F525
  | ^^^^^^^^^^^^^^^^^^^^^
